--- a/src/styles/_timeline-date-header.css
+++ b/src/styles/_timeline-date-header.css
@@ -12,7 +12,7 @@
     overflow-y: hidden;
     position: sticky;
     top: 0;
-    z-index: 50;
+    z-index: var(--z-timeline-date-header);
 }
 
 .date-header__cell {
